--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,9 @@ a:hover {
 .myTitle{
   text-shadow: 2px 2px 4px #000000 !important;
 }
+.aboutTitle{
+  text-align:center !important;
+}
 .bg-services{
   background: #343a40 !important;
 }
@@ -26,9 +29,26 @@ a:hover {
   max-width:200px;
   margin-bottom:10px;
 }
+.homeImg{
+  max-width:2000px;
+}
+.emailIcon{
+  margin-left:15px !important;
+}
 @media (min-width: 770px) {
   .portfolio-image{
     margin-right:60px;
     float:left;
+  }
+  .aboutTitle{
+    text-align:justify !important;
+  }
+}
+@media (max-width: 991px) {
+  .homepage{
+    padding-bottom: 14em;
+  }
+  .homeImg{
+    max-width:1200px;
   }
 }
